@@ -1,5 +1,6 @@
-#!perl -T
-#
+#!/usr/bin/perl
+
+# Test to see if the module loads correctly.
 use warnings;
 use strict;
 use Test::More tests => 1;
