@@ -1,26 +1,38 @@
-#!perl -T
-#
-use strict;
-use warnings;
-use English qw( -no_match_vars );
-use File::Find qw();
-use Test::More;
+#!/usr/bin/perl
 
-if ( !$ENV{TEST_AUTHOR} ) {
-    my $msg = 'Author test.  Set $ENV{TEST_AUTHOR} to a true value to run.';
-    plan skip_all => $msg;
+# Test that the module passes perlcritic
+use strict;
+BEGIN {
+	$|  = 1;
+	$^W = 1;
+}
+use File::Find;
+
+my @MODULES = (
+	'Perl::Critic 1.098',
+	"Test::Perl::Critic 1.01 (-profile => 't/perlcriticrc')",
+);
+
+# Don't run tests during end-user installs
+use Test::More;
+unless ( $ENV{AUTOMATED_TESTING} or $ENV{RELEASE_TESTING} ) {
+	plan( skip_all => "Author tests not required for installation" );
 }
 
-eval " use Test::Perl::Critic (-profile => 't/perlcriticrc'); ";
-if ($EVAL_ERROR) {
-    my $msg = 'Test::Perl::Critic required to criticise code';
-    plan skip_all => $msg;
+# Load the testing modules
+foreach my $MODULE ( @MODULES ) {
+	eval "use $MODULE";
+	if ( $@ ) {
+		$ENV{RELEASE_TESTING}
+		? die( "Failed to load required release-testing module $MODULE" )
+		: plan( skip_all => "$MODULE not available for testing" );
+	}
 }
 
 my @files;
 
 File::Find::find(
-    {   untaint => 1,
+    {
         wanted  => sub {
             /^.*\.pm\z/msx
                 && $File::Find::dir !~ /templates/mx
@@ -30,8 +42,10 @@ File::Find::find(
     'blib/'
 );
 
-plan tests => scalar @files;
-
-foreach (@files) {
-    critic_ok($_);
+foreach my $file (@files) {
+    critic_ok($file);
 }
+
+done_testing(scalar @files);
+
+1;
