@@ -6,3 +6,4 @@ severity = brutal
 
 [-Documentation::PodSpelling]
 
+[-Miscellanea::RequireRcsKeywords]
